TP_Kube_03/elk/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: kibana.theo-gimond.epf.takima.school
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-kibana-kb-http
            port:
              number: 5601
  tls:
  - hosts:
    - kibana.theo-gimond.epf.takima.school
    secretName: app-wildcard
